# int-installer

./: .gitignore  ARCHITECTURE.md  BUILD_INSTALL.md  Cargo.toml  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RELEASE_NOTES.md  build.sh  install.sh
crates/int-core/: Cargo.toml
crates/int-core/src/: desktop.rs  error.rs  extractor.rs  installer.rs  lib.rs  manifest.rs  security.rs  service.rs  utils.rs
crates/int-engine/: Cargo.toml  fix_icons.py  tauri.conf.json
crates/int-engine/capabilities/: main.json
crates/int-engine/src/: commands.rs  main.rs  state.rs
crates/int-engine/src-ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/int-engine/src-ui/src/: App.vue  style.css
crates/int-engine/src-ui/src/components/: CompleteStep.vue  ErrorStep.vue  InfoStep.vue  InstallingStep.vue  PathStep.vue  WelcomeStep.vue
crates/int-pack/: Cargo.toml
crates/int-pack/src/: builder.rs  main.rs  template.rs  validator.rs
docs/: manifest-spec.md  security.md
examples/auto-launch-app/: manifest.json
examples/composer/: manifest.json  prepare_composer.sh
examples/composer/scripts/: install.sh
examples/hello-world/: manifest.json
examples/hello-world/scripts/: install.sh
examples/real-app-demo/: manifest.json
examples/vscode/: manifest.json  prepare_vscode.sh
examples/vscode/scripts/: install.sh
integration/desktop/: int-engine.desktop
integration/mime/: int-installer.xml
integration/polkit/: com.intinstaller.install.policy
integration/scripts/: install-integration.sh
