[workspace]
members = [
    "crates/int-core",
    "crates/int-engine",
    "crates/int-pack",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["INT Installer Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ekosuprianto96/int-installer"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File operations
tar = "0.4"
flate2 = "1.0"
walkdir = "2.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async runtime (for Tauri)
tokio = { version = "1.35", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
