[package]
name = "int-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tar.workspace = true
flate2.workspace = true
walkdir.workspace = true
chrono.workspace = true
uuid.workspace = true

# Path operations
path-clean = "1.0"

# System integration
nix = { version = "0.27", features = ["user", "fs"] }
tempfile = "3.8"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"
