[package]
name = "int-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "int-engine"
path = "src/main.rs"

[dependencies]
int-core = { path = "../int-core" }
clap = { version = "4.4", features = ["derive"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.0.0", features = ["custom-protocol"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
